yaml/healthcheck/hc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-health-check-service
  namespace: redis
spec:
  selector:
    app: redis-health-check
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
