yaml/healthcheck/hc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-health-check-ingress
  namespace: redis
  annotations:
    kubernetes.io/ingress.class: nginx # or nginx if using an NGINX ingress controller
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" # Enable SSL passthrough if necessary
spec:
  rules:
    - host: health-check.trev-1.demo.redislabs.com
      http:
        paths:
          - path: /health.html
            pathType: ImplementationSpecific
            backend:
              service:
                name: redis-health-check-service
                port:
                  number: 80
